tests/baselines/reference/parserClass2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClass2.ts (4 errors) ====
    
    
        export class LoggerAdapter implements ILogger {
                     ~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
                                              ~~~~~~~
!!! error TS2304: Cannot find name 'ILogger'.
            constructor (public logger: ILogger) { 
                                        ~~~~~~~
!!! error TS2304: Cannot find name 'ILogger'.
                this._information = this.logger.information();
                     ~~~~~~~~~~~~
!!! error TS2339: Property '_information' does not exist on type 'LoggerAdapter'.
            }
        }